fixed overlapping footer

--- a/sass/blocks/video/_video.scss
+++ b/sass/blocks/video/_video.scss
@@ -20,28 +20,32 @@
   }
 
   &__inner {
-    height: 30.8rem;
     padding-top: 1rem;
+    padding-bottom: 4rem;
+  }
+
+  &__picture {
+    text-align: center;
   }
 
   &__control {
     position: relative;
-    top: -5.3rem;
+    top: -52px;
+    margin-bottom: -52px;
     padding-left: 6.25%;
     padding-right: 6.25%;
   }
 
   &__bar {
     position: relative;
-    height: 5.3rem;
-    width: 100%;
+    height: 44px;
     background-color: rgba($bottom-border-color, 0.5);
 
     &::before {
       content: "";
       display: block;
       position: relative;
-      top: 41%;
+      top: 52%;
       margin-left: 2.2rem;
       margin-right: 2.2rem;
       width: auto;
@@ -52,7 +56,6 @@
 
   &__btn-control {
     position: relative;
-    top: -0.8rem;
     height: 6.6rem;
     background-color: $color-input;
   }
@@ -61,6 +64,7 @@
     position: relative;
     display: inline-block;
     padding: 0;
+    margin: 0;
     cursor: pointer;
     outline: none;
     border: none;
@@ -79,7 +83,7 @@
 
     &--subtitles {
       top: 35%;
-      left: 56%;
+      left: 55%;
       height: 2rem;
       width: 3.2rem;
     }
